snapshots/phase-10/failure/netpol-datapath-drops.txt
Listening for events on 128 CPUs with 64x4096 of shared memory
Press Ctrl-C to quit
time=2026-07-30T12:34:16.70054712Z level=info msg="Initializing dissection cache..."
Policy verdict log: flow 0x6acb528c local EP ID 744, remote ID host, proto 6, ingress, action allow, auth: disabled, match L3-Only, 10.244.2.108:47230 -> 10.244.2.113:80 tcp SYN
Policy verdict log: flow 0x9231fa78 local EP ID 744, remote ID host, proto 6, ingress, action allow, auth: disabled, match L3-Only, 10.244.2.108:47238 -> 10.244.2.113:80 tcp SYN
Policy verdict log: flow 0x30ae2975 local EP ID 744, remote ID host, proto 6, ingress, action allow, auth: disabled, match L3-Only, 10.244.2.108:47248 -> 10.244.2.113:80 tcp SYN
Policy verdict log: flow 0x1e04bebb local EP ID 744, remote ID host, proto 6, ingress, action allow, auth: disabled, match L3-Only, 10.244.2.108:47264 -> 10.244.2.113:80 tcp SYN
Policy verdict log: flow 0x4f7c8a78 local EP ID 744, remote ID host, proto 6, ingress, action allow, auth: disabled, match L3-Only, 10.244.2.108:35924 -> 10.244.2.113:80 tcp SYN
Policy verdict log: flow 0x356fb3b6 local EP ID 744, remote ID host, proto 6, ingress, action allow, auth: disabled, match L3-Only, 10.244.2.108:35940 -> 10.244.2.113:80 tcp SYN
Policy verdict log: flow 0xbd9fa32c local EP ID 744, remote ID host, proto 6, ingress, action allow, auth: disabled, match L3-Only, 10.244.2.108:35952 -> 10.244.2.113:80 tcp SYN
Policy verdict log: flow 0x6e4f6913 local EP ID 744, remote ID host, proto 6, ingress, action allow, auth: disabled, match L3-Only, 10.244.2.108:35956 -> 10.244.2.113:80 tcp SYN
Policy verdict log: flow 0x8e664ff4 local EP ID 744, remote ID 18819, proto 6, ingress, action deny, auth: disabled, match none, 10.244.2.27:33848 -> 10.244.2.113:80 tcp SYN
xx drop (Policy denied) flow 0x8e664ff4 to endpoint 744, ifindex 11, file bpf_lxc.c:2381, , identity 18819->10568: 10.244.2.27:33848 -> 10.244.2.113:80 tcp SYN
Policy verdict log: flow 0xc7fcccbb local EP ID 744, remote ID 18819, proto 6, ingress, action deny, auth: disabled, match none, 10.244.2.27:33848 -> 10.244.2.113:80 tcp SYN
xx drop (Policy denied) flow 0xc7fcccbb to endpoint 744, ifindex 11, file bpf_lxc.c:2381, , identity 18819->10568: 10.244.2.27:33848 -> 10.244.2.113:80 tcp SYN
Policy verdict log: flow 0xfb0c2116 local EP ID 744, remote ID host, proto 6, ingress, action allow, auth: disabled, match L3-Only, 10.244.2.108:35960 -> 10.244.2.113:80 tcp SYN
Policy verdict log: flow 0x62346c46 local EP ID 744, remote ID 18819, proto 6, ingress, action deny, auth: disabled, match none, 10.244.2.27:37730 -> 10.244.2.113:80 tcp SYN
xx drop (Policy denied) flow 0x62346c46 to endpoint 744, ifindex 11, file bpf_lxc.c:2381, , identity 18819->10568: 10.244.2.27:37730 -> 10.244.2.113:80 tcp SYN
Policy verdict log: flow 0x4613ae4e local EP ID 744, remote ID host, proto 6, ingress, action allow, auth: disabled, match L3-Only, 10.244.2.108:53782 -> 10.244.2.113:80 tcp SYN
Policy verdict log: flow 0xf24e6c38 local EP ID 744, remote ID 18819, proto 6, ingress, action deny, auth: disabled, match none, 10.244.2.27:37730 -> 10.244.2.113:80 tcp SYN
xx drop (Policy denied) flow 0xf24e6c38 to endpoint 744, ifindex 11, file bpf_lxc.c:2381, , identity 18819->10568: 10.244.2.27:37730 -> 10.244.2.113:80 tcp SYN
Policy verdict log: flow 0xa2d80b53 local EP ID 744, remote ID host, proto 6, ingress, action allow, auth: disabled, match L3-Only, 10.244.2.108:53796 -> 10.244.2.113:80 tcp SYN
Policy verdict log: flow 0x6bee0dd2 local EP ID 744, remote ID 18819, proto 6, ingress, action deny, auth: disabled, match none, 10.244.2.27:37742 -> 10.244.2.113:80 tcp SYN
xx drop (Policy denied) flow 0x6bee0dd2 to endpoint 744, ifindex 11, file bpf_lxc.c:2381, , identity 18819->10568: 10.244.2.27:37742 -> 10.244.2.113:80 tcp SYN
Policy verdict log: flow 0x40488449 local EP ID 744, remote ID host, proto 6, ingress, action allow, auth: disabled, match L3-Only, 10.244.2.108:53804 -> 10.244.2.113:80 tcp SYN
Policy verdict log: flow 0x7d32e9d6 local EP ID 744, remote ID 18819, proto 6, ingress, action deny, auth: disabled, match none, 10.244.2.27:37742 -> 10.244.2.113:80 tcp SYN
xx drop (Policy denied) flow 0x7d32e9d6 to endpoint 744, ifindex 11, file bpf_lxc.c:2381, , identity 18819->10568: 10.244.2.27:37742 -> 10.244.2.113:80 tcp SYN
